# Tsukasa-Tsukuyomi

./: .gitattributes  .gitconfig  .gitignore  CMakeLists.txt  MIT-LICENSE  README.md  SECURITY.md  Tsukasa Tsukuyomi.rc  action.yaml  appveyor.yml  premake5.lua  resource.h
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature.yaml
.github/workflows/: cmake.yaml  msbuild.yaml  msbuild.yml
handler/: cmd_engine.h  cmd_list.h  cmd_lists.h  database.h  decoder.h  dotenv.h  ocr_engine.h
handler/builder/: button.h  config.h  layout.h
handler/cmd_builder/: cmd_button.h  cmd_configure.h  cmd_layout.h  cmd_struct.h
lib/: dpp.lib  sqlite3.lib
src/: database.cpp  main.cpp
src/cmd_engine/: error_check.cpp  purge_engine.cpp  send_confirm.cpp  send_error.cpp  send_success.cpp  time_format.cpp
src/cmd_lists/cmd_common/: ocr.cpp  ping.cpp  profile.cpp
src/cmd_lists/cmd_moderation/: ban.cpp  kick.cpp  nickname.cpp  purge.cpp  timeout.cpp  unban.cpp  untimeout.cpp
src/commands/common/: ocr.cpp  ping.cpp  profile.cpp
src/commands/moderation/: ban.cpp  kick.cpp  nickname.cpp  purge.cpp  timeout.cpp  unban.cpp  untimeout.cpp
src/database/: db_handle.cpp  run_database.cpp
src/database/db_resources/: purge_counter.cpp
src/ocr_engine/: levenshtein.cpp  training_model.cpp
